--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -3,7 +3,7 @@
 {% block content %}
 
   <div class="container">
-    <h1>Последние обновления на сайте</h1>
+  <h1>Последние обновления на сайте</h1>
     {% for post in page_obj %}
       {% include 'posts/includes/post_in_page_obj.html' with show_group_link=True show_author_link=True %}
     {% endfor %}
@@ -11,3 +11,6 @@
   </div>
 
 {% endblock %}
+
+
+    {% comment %} {% include 'posts/includes/switcher.html' %} {% endcomment %}
