--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -2,9 +2,25 @@
 {% block title %}Профайл пользователя {{ author }} {% endblock %}
 {% block content %}
 
+<div class="mb-5">
 <div class="container">        
   <h1>Все посты пользователя {{ author }}</h1>
   <h3>Всего постов: {{ author.posts.count }} </h3>
+  {% comment %} {% if following %}
+    <a
+      class="btn btn-lg btn-light"
+      href="{% url 'posts:profile_unfollow' author.username %}" role="button"
+    >
+      Отписаться
+    </a>
+  {% else %}
+      <a
+        class="btn btn-lg btn-primary"
+        href="{% url 'posts:profile_follow' author.username %}" role="button"
+      >
+        Подписаться
+      </a>
+  {% endif %} {% endcomment %}
   {% for post in page_obj %}
     {% include 'posts/includes/post_in_page_obj.html' with show_group_link=True %}
   {% endfor %}
