--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -6,7 +6,7 @@
 <div class="container">        
   <h1>Все посты пользователя {{ author }}</h1>
   <h3>Всего постов: {{ author.posts.count }} </h3>
-  {% comment %} {% if following %}
+  {% if following %}
     <a
       class="btn btn-lg btn-light"
       href="{% url 'posts:profile_unfollow' author.username %}" role="button"
@@ -20,7 +20,7 @@
       >
         Подписаться
       </a>
-  {% endif %} {% endcomment %}
+  {% endif %}
   {% for post in page_obj %}
     {% include 'posts/includes/post_in_page_obj.html' with show_group_link=True %}
   {% endfor %}
