--- a/yatube/templates/posts/follow.html
+++ b/yatube/templates/posts/follow.html
@@ -1,13 +1,14 @@
-{% comment %} {% extends 'base.html' %}
+{% extends 'base.html' %}
 {% block title %}Подписки{% endblock %}
 {% block content %}
 
   <div class="container">
     <h1>Последние обновления в Подписках</h1>
+    {% include 'posts/includes/switcher.html' %}
     {% for post in page_obj %}
-      {% include 'posts/includes/post_in_page_obj.html' with show_group_link=True show_author_link=True %}
+      {% include 'posts/includes/following_post_page_obj.html' with show_group_link=True show_author_link=True %}
     {% endfor %}
     {% include 'posts/includes/paginator.html' %}
   </div>
 
-{% endblock %} {% endcomment %}
+{% endblock %}
