--- a/yatube/templates/posts/includes/switcher.html
+++ b/yatube/templates/posts/includes/switcher.html
@@ -1,5 +1,3 @@
-{% comment %} <!-- templates/posts/includes/switcher.html -->
-
 {% if user.is_authenticated %}
   <div class="row my-3">
     <ul class="nav nav-tabs">
@@ -21,4 +19,4 @@
       </li>
     </ul>
   </div>
-{% endif %} {% endcomment %}
+{% endif %}
