--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -6,25 +6,29 @@
 <div class="container">        
   <h1>Все посты пользователя {{ author }}</h1>
   <h3>Всего постов: {{ author.posts.count }} </h3>
-  {% if following %}
-    <a
-      class="btn btn-lg btn-light"
-      href="{% url 'posts:profile_unfollow' author.username %}" role="button"
-    >
-      Отписаться
-    </a>
-  {% else %}
+  {% if author != user %}
+    {% if following %}
       <a
-        class="btn btn-lg btn-primary"
-        href="{% url 'posts:profile_follow' author.username %}" role="button"
+        class="btn btn-lg btn-light"
+        href="{% url 'posts:profile_unfollow' author.username %}" role="button"
       >
-        Подписаться
+        Отписаться
       </a>
+    {% else %}
+        <a
+          class="btn btn-lg btn-primary"
+          href="{% url 'posts:profile_follow' author.username %}" role="button"
+        >
+          Подписаться
+        </a>
+    {% endif %}
   {% endif %}
-  {% for post in page_obj %}
-    {% include 'posts/includes/post_in_page_obj.html' with show_group_link=True %}
-  {% endfor %}
-  {% include 'posts/includes/paginator.html' %}
+    {% for post in page_obj %}
+      {% include 'posts/includes/post_in_page_obj.html' with show_group_link=True %}
+    {% endfor %}
+    {% include 'posts/includes/paginator.html' %}
+  
 </div>
+
 
 {% endblock %}
