--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -5,9 +5,9 @@
 <div class="mb-5">
 <div class="container">        
   <h1>Все посты пользователя {{ author }}</h1>
-  <h3>Всего постов: {{ author.posts.count }} </h3>
-  <h3>Всего подписок: {{ author.follower.count }} </h3>
-  <h3>Всего подписчиков: {{ author.following.count }} </h3>
+  <h3>Постов: {{ author.posts.count }} </h3>
+  <h3>подписок: {{ author.follower.count }} </h3>
+  <h3>подписчиков: {{ author.following.count }} </h3>
   {% if author != user %}
     {% if following %}
       <a
