--- a/yatube/templates/posts/includes/post_in_page_obj.html
+++ b/yatube/templates/posts/includes/post_in_page_obj.html
@@ -16,16 +16,13 @@
           <img class="card-img my-2" src="{{ im.url }}">
         {% endthumbnail %}
         <p>{{ post.text|linebreaksbr }}</p>
-        <br/><br/>
-        <hr>
-        <br/>
         <form action="{% url 'posts:like_post' post.pk %}"
           method="POST">
           {% csrf_token %}
           <button type="submit", name="post_id", value="{{ post.id }}", 
-          class="btn btn-primary btn-sm">Like</button> - {{ total_likes }} Likes
+          class="btn btn-primary btn-sm">Like</button> {{ total_likes }}
         <form/>
-        <a href="{% url 'posts:post_detail' post.id %}">подробная информация</a>
+        <a href="{% url 'posts:post_detail' post.id %}">подробная информация о посте</a>
     </article>
     {% if post.group and show_group_link %}
       <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
