--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="{% static 'img/fav/favicon-32x32.png' %}">
     <link rel="icon" type="image/png" sizes="16x16" href="{% static 'img/fav/favicon-16x16.png' %}">
     <meta name="msapplication-TileColor" content="#000">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#FF9F94">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <title>{% block title %}Yatube project main page{% endblock %}</title>
   </head>
