--- a/yatube/templates/posts/includes/post_in_page_obj.html
+++ b/yatube/templates/posts/includes/post_in_page_obj.html
@@ -5,7 +5,7 @@
       <li>
         Автор: {{ post.author }}
           {% if post.group and show_author_link %}
-            <a href={% url 'posts:profile' post.author %}>все посты пользователя</a>
+            <a href={% url 'posts:profile' post.author %}>все посты пользователя </a>
           {% endif %}
         </li>
         <li>
@@ -15,14 +15,9 @@
         {% thumbnail post.image "960x339" crop="center" upscale=True as im %}
           <img class="card-img my-2" src="{{ im.url }}">
         {% endthumbnail %}
+        <hr>
         <p>{{ post.text|linebreaksbr }}</p>
-        <form action="{% url 'posts:like_post' post.pk %}"
-          method="POST">
-          {% csrf_token %}
-          <button type="submit", name="post_id", value="{{ post.id }}", 
-          class="btn btn-primary btn-sm">Like</button> {{ total_likes }}
-        <form/>
-        <a href="{% url 'posts:post_detail' post.id %}">подробная информация о посте</a>
+        <a href="{% url 'posts:post_detail' post.id %}">подробная информация {{ total_likes }}</a>
     </article>
     {% if post.group and show_group_link %}
       <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
