--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -3,26 +3,26 @@
 {% block content %} 
 {% load thumbnail %}
 <div class="container py-5">
-  <div class="row"> 
+  <div class="row">
     <aside class="col-12 col-md-3"> 
       <ul class="list-group list-group-flush"> 
-        <li class="list-group-item"> 
+        <li class="list-group-item" style="background-color: LightSalmon ">
           Дата публикации: {{ posts.pub_date|date:"d E Y" }}</li> 
             {% if posts.group %} 
-              <li class="list-group-item"> 
+              <li class="list-group-item" style="background-color: LightSalmon "> 
               Группа: {{ posts.group.title }} 
                 <a href="{% url 'posts:group_list' posts.group.slug %}"> 
                   все записи группы 
                 </a> 
               </li> 
             {% endif %} 
-              <li class="list-group-item"> 
+              <li class="list-group-item" style="background-color: LightSalmon "> 
                 Автор: {{ posts.author }} 
               </li> 
-              <li class="list-group-item d-flex justify-content-between align-items-center"> 
+              <li class="list-group-item d-flex justify-content-between align-items-center" style="background-color: LightSalmon "> 
                 Всего постов автора:  <span >{{ posts.author.posts.count }}</span> 
               </li> 
-              <li class="list-group-item"> 
+              <li class="list-group-item" style="background-color: LightSalmon "> 
                 <a href="{% url 'posts:profile' posts.author %}"> 
                   все посты пользователя</a> 
               </li>
@@ -33,13 +33,21 @@
         {% thumbnail posts.image "960x339" crop="center" upscale=True as im %}
           <img class="card-img my-2" src="{{ im.url }}">
         {% endthumbnail %}
-        <p>{{ posts.text }}</p> 
+        <p>{{ posts.text }}</p>
+        {% if user.is_authenticated %}
+        <form method="POST" action="{% url 'posts:like_post' pk=posts.pk %}">
+          {% csrf_token %}
+          <button type="submit" name="post_id" value="{{ posts.id }}" 
+          class="btn btn-primary btn-sm">Мне нравится={{ total_likes }} </button>
+        </form>
+        {% endif %}
+        <br></br>
         {% if user.is_authenticated and user == posts.author %} 
         <a class="btn btn-primary" href="{% url 'posts:post_edit' posts.id %}"> 
           редактировать запись 
         </a> 
         {% endif %}
-        {% include 'posts/includes/add_comment_form.html' %} 
+        {% include 'posts/includes/add_comment_form.html' %}
       </article>  
     {% if not forloop.last %}<hr>{% endif %} 
   </div>  
