--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -4,7 +4,7 @@
 
   <div class="container">
   <h1>Последние обновления на сайте</h1>
-    {% include 'posts/includes/switcher.html' %}
+    {% include 'posts/includes/switcher.html' with page_flag='index.html' %}
     {% for post in page_obj %}
       {% include 'posts/includes/post_in_page_obj.html' with show_group_link=True show_author_link=True %}
     {% endfor %}
