--- a/yatube/templates/includes/header.html
+++ b/yatube/templates/includes/header.html
@@ -5,7 +5,7 @@
       <a class="navbar-brand" href="{% url 'posts:index' %}">
         <img src="{% static 'img/logo.png' %}" width="30" height="30" 
         class="d-inline-block align-top" alt="">
-        <span style="color:white">Pandas</span>blog <em>о пандочках, и не только </em>
+        <span style="color:white">Pandas</span>blog
       </a>
       <ul class="nav nav-pills">
         <li class="nav-item">              
