--- a/yatube/templates/about/author.html
+++ b/yatube/templates/about/author.html
@@ -7,8 +7,8 @@
 		<div class="container">
 			<img src="{% static 'img/panda.jpg'%}" alt="Автор" width="300" height="300">
 			<div class="bio">
-				<p>Меня зовут Евстратов Роман Геннадьевич, мне 28 лет, и я Python разработчик. Это мой первый серьезный проект в программировании. Надеюсь, моё "творение" придет Вам по душе, спасибо!</p>
-		<p>По вопросам сотрудничества пишите agentOO8@yandex.ru </p>
+				<p>Меня зовут Евстратов Роман Геннадьевич, я начинающий Python разработчик. Рад представить вам свой первый серьезный проект, который сделан с большим энтузиазмом и желанием показать свои навыки. Буду признателен за любую обратную связь и готов рассмотреть предложения о сотрудничестве</p>
+		<p>agentOO8@yandex.ru </p>
 				<div class="social-links">
 					<a href="https://t.me/"><img src="{% static 'img/Telegram.png'%}" alt=width="50" height="50"></a>
 					<a href="https://wa.me/79097620071"><img src="{% static 'img/whatsapp.png'%}" alt=width="65" height="65"></a>
