--- a/yatube/templates/about/tech.html
+++ b/yatube/templates/about/tech.html
@@ -8,7 +8,7 @@
   <aside class="col-12 col-md-10">
     <ul class="list-group list-group-flush">
       <ol>
-        <li>Отдельная благодарность ребятам из команды Yandex Practicum и дружному сообществу из 59-когорты: <br><u>ревьюер - Тимур Хужин, наставник - Петр Меньших</u> - большое Вам спасибо, за помощь в обучении!
+        <li>Отдельная благодарность ребятам из команды Yandex Practicum и дружному сообществу 59-когорты, <br><u>а так же ревьюеру и наставникам</u> - большое Вам спасибо, за помощь в обучении!
         <br>
         <li><a href="https://www.djangoproject.com/"><img src="{% static 'img/django.png' %}" alt=width="50" height="50"></a>  Django — это высокоуровневый Python веб-фреймворк, который позволяет быстро создавать безопасные и поддерживаемые веб-сайты. </li>
         <li><a href="https://docs-python.ru/"><img src="{% static 'img/python-logo-only.png' %}" alt=width="50" height="50"></a> Python — это язык программирования, который широко используется в интернет-приложениях, разработке программного обеспечения, науке о данных и машинном обучении (ML). </li>
