--- a/yatube/templates/core/404.html
+++ b/yatube/templates/core/404.html
@@ -2,6 +2,8 @@
 {% block title %}Yatube - 404 Page Not Found{% endblock %}
 {% block content %}
   <h1>Oops!</h1>
+  <h>Самсинг вент ронг
+    <img src="{% static 'img/ups.png'%}" alt="" width="300" height="300">
   <p>Уважаемый/ая - страницы {{ path }} не существует!</p>
   <a href="{% url 'posts:index' %}">Соизвольте перейти на главную</a>
 {% endblock %}
