--- a/yatube/templates/posts/includes/post_in_page_obj.html
+++ b/yatube/templates/posts/includes/post_in_page_obj.html
@@ -25,7 +25,8 @@
         </form>
     </article>
     {% if post.group and show_group_link %}
-      <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
+      <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы {{ post.group.title }}</a>
     {% endif %}
+    
   <hr>
   {% if not forloop.last %}<hr>{% endif %}
