--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -5,10 +5,12 @@
 <div class="container">
   <h1>{{ group.title }}</h1>
   <p>{{ group.description }}</p>
+  {% include 'posts/includes/paginator.html' %}
     {% for post in page_obj %}
       {% include 'posts/includes/post_in_page_obj.html' with show_author_link=True %}
     {% endfor %}
     {% include 'posts/includes/paginator.html' %}
+    {% include 'posts/includes/up.html' %}
 </div>
 
 {% endblock %}
