--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,14 +1,23 @@
 {% extends 'base.html' %}
 {% block title %}Последние обновления на сайте{% endblock %}
 {% block content %}
-
   <div class="container">
   <h1>Последние обновления на сайте</h1>
     {% include 'posts/includes/switcher.html' with page_flag='index.html' %}
+    {% include 'posts/includes/paginator.html' %}
+    <div>
+      <a>Выберите группу для просмотра постов:
+      {% for group in groups %}
+        <a href="{% url 'posts:group_list' group.slug %}">{{ group.title }}</a>
+      {% endfor %}
+    </div>
+    </form>
     {% for post in page_obj %}
       {% include 'posts/includes/post_in_page_obj.html' with show_group_link=True show_author_link=True %}
     {% endfor %}
+
     {% include 'posts/includes/paginator.html' %}
+    {% include 'posts/includes/up.html' %}
   </div>
 
 {% endblock %}
