changed div class to conrainer

--- a/yatube/templates/about/tech.html
+++ b/yatube/templates/about/tech.html
@@ -2,7 +2,7 @@
 {% block title %}Технологии{% endblock %}
 {% block content %}
 {% load static %}
-<div class="row" style="padding-left: 150px">
+<div class="container">
   <br>
   <h1>В создании проекта использовались следующие ресурсы</h1>
   <aside class="col-12 col-md-10">
