--- a/yatube/templates/about/author.html
+++ b/yatube/templates/about/author.html
@@ -2,7 +2,7 @@
 {% block title %}{{ just_title }}{% endblock %}
 {% load static %}
 {% block content %}
-<div style="padding-left: 150px">
+<div class="container">
 	<h1>Привет, я автор проекта</h1>
 		<div class="container">
 			<img src="{% static 'img/panda.jpg'%}" alt="Автор" width="300" height="300">
